--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,12 @@
     <color name="dark_orange">#DD9223</color>
     <color name="primary_orange">#FF9800</color>
     <color name="light_orange">#FDA11A</color>
+    <color name="semitransparent_brown">#61763D00</color>
     <color name="neutral_white">#FFFFFF</color>
     <color name="neutral_black">#000000</color>
     <color name="neutral_grey">#D9D9D9</color>
-    <color name="inputTextBox_color">#61763D00</color>
+    <color name="radio_selector">@color/radio_flat_selector</color>
+
+    <color name="inputTextBox_color">@color/semitransparent_brown</color>
     <color name="smallText_color">@color/primary_orange</color>
 </resources>
