--- a/app/src/main/res/layout/fragment_create_new_recipe_step_two.xml
+++ b/app/src/main/res/layout/fragment_create_new_recipe_step_two.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/main_background"
     android:fillViewport="true"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +72,7 @@
             android:paddingVertical="12dp"
             android:text="Medium"
             android:textAlignment="center"
-            android:textColor="@color/dark_orange" />
+             />
 
         <RadioButton
             android:id="@+id/radioHardBtn"
@@ -86,7 +87,7 @@
             android:paddingVertical="12dp"
             android:text="Hard"
             android:textAlignment="center"
-            android:textColor="@color/dark_orange" />
+            />
     </RadioGroup>
 
     <TextView
@@ -103,6 +104,8 @@
         app:layout_constraintTop_toBottomOf="@id/recipeDifficultyRG" />
 
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/tag_item"
+        
         android:id="@+id/tagsRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
