--- a/app/src/main/res/layout/fragment_create_new_recipe_step_one.xml
+++ b/app/src/main/res/layout/fragment_create_new_recipe_step_one.xml
@@ -108,7 +108,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/uploadPhotoInstructionTV"
-            app:tint="@color/primary_orange" />
+             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -183,7 +183,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/loginBtn"
+        android:id="@+id/nextStepBtn"
         style="@style/PrimaryButtonWhite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
