--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,7 +126,7 @@
     <style name="RadioButtonSelected" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:textColor">@color/neutral_white</item>
         <item name="backgroundTint">@null</item>
-        <item name="android:background">@drawable/radio_flat_selected</item>
+        <item name="android:background">@drawable/radio_flat_selector</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
@@ -138,9 +138,9 @@
     </style>
 
     <style name="RadioButtonDefault" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="android:textColor">@color/primary_orange</item>
+        <item name="android:textColor">@drawable/radio_text_color_selector</item>
         <item name="backgroundTint">@null</item>
-        <item name="android:background">@drawable/radio_flat_regular</item>
+        <item name="android:background">@drawable/radio_flat_selector</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
