--- a/app/src/main/res/layout/fragment_create_new_recipe_step_two.xml
+++ b/app/src/main/res/layout/fragment_create_new_recipe_step_two.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@android:color/transparent"
-            android:checked="true"
+            android:checked="false"
             android:paddingHorizontal="16dp"
             android:paddingVertical="12dp"
             android:text="Easy"
