--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,9 +100,20 @@
                 android:name="newRecipe"
                 app:argType="com.example.cookspot.model.Recipe"
                 app:nullable="true" />
+            <action
+                android:id="@+id/action_fragmentCreateRecipeStepThree_to_recipeDetailFragment"
+                app:destination="@id/recipeDetailFragment" />
         </fragment>
         <action
             android:id="@+id/action_global_feedFragment"
             app:destination="@id/feedFragment" />
+        <fragment
+            android:id="@+id/recipeDetailFragment"
+            android:name="com.example.cookspot.feature.feed.RecipeDetailFragment"
+            android:label="RecipeDetailFragment" >
+            <argument
+                android:name="finalRecipe"
+                app:argType="com.example.cookspot.model.Recipe" />
+        </fragment>
     </navigation>
 </navigation>
