--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="neutral_white">#FFFFFF</color>
     <color name="neutral_black">#000000</color>
     <color name="neutral_grey">#D9D9D9</color>
+    <color name="dark_grey">#6C6C6C</color>
     <color name="radio_selector">@color/radio_flat_selector</color>
 
     <color name="inputTextBox_color">@color/semitransparent_brown</color>
