--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -143,16 +143,28 @@
         app:layout_constraintTop_toTopOf="@id/postedNumberTV" />
 
     <Button
+        android:layout_marginEnd="12dp"
         android:id="@+id/editProfileBtn"
         style="@style/PrimaryButtonWhite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
         android:text="Edit Profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/logOutBtn"
+        app:layout_constraintStart_toStartOf="@id/userFullNameTV"
         app:layout_constraintTop_toBottomOf="@id/postedTV" />
+
+    <Button
+        android:id="@+id/logOutBtn"
+        style="@style/PrimaryButtonWhite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Log out"
+        app:layout_constraintBottom_toBottomOf="@id/editProfileBtn"
+        app:layout_constraintEnd_toEndOf="@id/userFullNameTV"
+        app:layout_constraintStart_toEndOf="@id/editProfileBtn"
+        app:layout_constraintTop_toTopOf="@id/editProfileBtn" />
 
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="0dp"
