--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,7 @@
                 android:backgroundTint="@null"
                 android:text="@string/back_button_text"
                 app:icon="@drawable/ic_left_arrow"
+                app:layout_constraintBottom_toTopOf="@+id/authenticationActionsCV"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
