--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,37 +9,10 @@
         android:label="SplashFragment">
         <action
             android:id="@+id/action_splashFragment_to_authenticationFragment"
-            app:destination="@id/authenticationFragment"
+            app:destination="@id/authentication"
             app:enterAnim="@anim/nav_default_enter_anim" />
         <action
             android:id="@+id/action_splashFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/authenticationFragment"
-        android:name="com.example.cookspot.feature.authentication.AuthenticationFragment"
-        android:label="AuthenticationFragment">
-        <action
-            android:id="@+id/action_authenticationFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-        <action
-            android:id="@+id/action_authenticationFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.cookspot.feature.authentication.LoginFragment"
-        android:label="LoginFragment">
-        <action
-            android:id="@+id/action_loginFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.cookspot.feature.authentication.RegisterFragment"
-        android:label="RegisterFragment">
-        <action
-            android:id="@+id/action_registerFragment_to_feedFragment"
             app:destination="@id/feedFragment" />
     </fragment>
     <fragment
@@ -48,13 +21,16 @@
         android:label="FeedFragment">
         <action
             android:id="@+id/action_feedFragment_to_authenticationFragment"
-            app:destination="@id/authenticationFragment" />
+            app:destination="@id/authentication" />
         <action
             android:id="@+id/action_feedFragment_to_profileFragment"
             app:destination="@id/user_profile" />
         <action
             android:id="@+id/action_feedFragment_to_create_recipe_navigation"
             app:destination="@id/create_recipe_navigation" />
+        <action
+            android:id="@+id/action_feedFragment_to_fragmentViewFullRecipe"
+            app:destination="@id/fragmentViewFullRecipe" />
     </fragment>
     <navigation
         android:id="@+id/create_recipe_navigation"
@@ -127,10 +103,48 @@
                 app:destination="@id/create_recipe_navigation" />
             <action
                 android:id="@+id/action_profileFragment_to_authenticationFragment"
-                app:destination="@id/authenticationFragment" />
+                app:destination="@id/authentication" />
             <action
                 android:id="@+id/action_profileFragment_to_editProfileFragment"
                 app:destination="@id/editProfileFragment" />
         </fragment>
     </navigation>
+    <navigation android:id="@+id/authentication"
+        app:startDestination="@id/authenticationFragment">
+        <fragment
+            android:id="@+id/authenticationFragment"
+            android:name="com.example.cookspot.feature.authentication.AuthenticationFragment"
+            android:label="AuthenticationFragment">
+            <action
+                android:id="@+id/action_authenticationFragment_to_loginFragment"
+                app:destination="@id/loginFragment" />
+            <action
+                android:id="@+id/action_authenticationFragment_to_registerFragment"
+                app:destination="@id/registerFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/loginFragment"
+            android:name="com.example.cookspot.feature.authentication.LoginFragment"
+            android:label="LoginFragment">
+            <action
+                android:id="@+id/action_loginFragment_to_feedFragment"
+                app:destination="@id/feedFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/registerFragment"
+            android:name="com.example.cookspot.feature.authentication.RegisterFragment"
+            android:label="RegisterFragment">
+            <action
+                android:id="@+id/action_registerFragment_to_feedFragment"
+                app:destination="@id/feedFragment" />
+        </fragment>
+    </navigation>
+    <fragment
+        android:id="@+id/fragmentViewFullRecipe"
+        android:name="com.example.cookspot.feature.feed.FragmentViewFullRecipe"
+        android:label="FragmentViewFullRecipe" >
+        <argument
+            android:name="recipe"
+            app:argType="com.example.cookspot.model.Recipe" />
+    </fragment>
 </navigation>
